# FastAPI-Template

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: df768aa6da3d_created_todos_table.py
src/: config.py  database.py  main.py  schema.py
src/package/: config.py  constants.py  dependencies.py  models.py  router.py  schemas.py  service.py
